--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ h1,h2,h3,h4,h5,h5,p{
 	}
 }
 
-/******* Progress Bar *********/
+****** Progress Bar ********
 
 .progress{
 	border-radius: 10px;
