--- a/css/style.css
+++ b/css/style.css
@@ -1,260 +1,281 @@
+
+
 *,
 *::before,
-*::after{
-	box-sizing: border-box;
+*::after {
+  box-sizing: border-box;
 }
 
-html{
-	font-family: sans-serif;
-	line-height: 1.15;
-	-webkit-text-size-adjust: 100%;
-	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+html {
+  font-family: sans-serif;
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-body{
-	margin: 0;
-	font-family: "Roboto" sans-serif;
-	font-size: 1rem;
-	font-weight: 400;
-	line-height: 1.5;
-	color: #6c757d;
-	text-align: left;
-	background-color: #ffffff;
+ 
+
+body {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #6c757d;
+  text-align: left;
+  background-color: #ffffff;
+}
+ 
+a {
+  color: #0BCEAF;
+  text-decoration: none;
+  background-color: transparent;
 }
 
-a{
-	color: #0BCEAF;
-	text-decoration: none;
-	background-color: transparent;
+a:hover {
+  color: #078571;
+  text-decoration: underline;
+}
+ 
+h1,h2,h3,h4,h5,h6,p{
+  color: #020202 !important;
+} 
+
+ 
+
+/********** Template CSS ************/
+
+
+.text-stroke-header {
+  -webkit-text-stroke: 3px #ffffff;
+  color: transparent;
 }
 
-a:hover{
-	color: #078571;
-	text-decoration: underline;
+.btn {
+  padding: 10px 25px;
+  border-radius: 100px;
 }
 
-h1,h2,h3,h4,h5,h5,p{
-	color: #020202 !important;
+.btn-social {
+  width: 45px;
+  height: 45px;
+  padding-left: 0;
+  padding-right: 0;
+  text-align: center;
+  border-radius: 45px;
 }
 
-/************* Template CSS ***************/
-
-.text-stroke-header{
-	-webkit-text-stroke: 3px #ffffff;
-	color: trnasparent;
+.form-control {
+  border-radius: 25px;
 }
 
-.btn{
-	padding: 10px 25px;
-	border-radius: 100px;
-}
-.btn-social{
-	width: 45px;
-	height: 45px;
-	padding-left: 0;
-	padding-right: 0;
-	text-align: center;
-	border-radius: 45px;
+
+
+
+/* ================ Navigation Menu ====================*/
+
+
+.navbar-light {
+  display: none;
 }
 
-.form-control{
-	border-radius: 25px;
-}
-
-/***************** Navigation Menu *******************/
-
-.navbar-light{
-	display: none;
-}
-
-.navbar-light .navbar-nav .nav-link{
-	padding: 25px 10px;
-	color: #343a40;
-	font-weight: 500;
-	outline: none;
+.navbar-light .navbar-nav .nav-link {
+  padding: 25px 10px;
+  color: #343a40;
+  font-weight: 500;
+  outline: none;
 }
 
 .navbar-light .navbar-nav .nav-link:hover,
-.navbar-light .navbar-nav .nav-link.active{
-	color: #0BCEAF;
+.navbar-light .navbar-nav .nav-link.active {
+  color: #0BCEAF;
 }
 
-@media (max-width: 991.98px){
-	.navbar-light .navbar-nav .nav-link{
-		padding: 10px 0;
-	}
+@media (max-width: 991.98px) {
+  .navbar-light .navbar-nav .nav-link {
+    padding: 10px 0;
+  }
 }
 
-/************ Hero section **************/
+
+/*===================== Hero section ======================*/
 
 .about-img{
-	margin-left: -100px;
-	right: -60px;
+ margin-left: -100px;
+ right: -60px;
 }
 
 .display-1{
-	font-size: 160px;
-	right: -60px;
+  font-size: 160px;
+  font-weight: 1000;
+  
 }
-
+ 
 .position-absolute{
-	font-weight: 700;
+  font-weight: 700;
+  
 }
 
-.typed-cursor{
-	font-size: 45px;
-	color: #ffffff;
+.typed-cursor {
+  font-size: 45px;
+  color: #ffffff;
 }
 
 .blue{
-	background-color: #1c5ce6;
-	color: #ffffff;
+  background-color: #1c5ce6;
+  color: #ffffff;
 }
-
 .btn{
-	border: 2px solid rgb(29, 105, 247);
-}
-
+  border: 2px solid rgb(29, 105, 247);
+} 
 .btn-white{
-	background-color: #ffffff;
-	border: 2px solid #ffffff;
+  background-color: #ffffff;
+  border:2px solid #ffffff;
 }
-
 .btn-blue{
-	border: 2.3px solid #ffffff;
-	color: #ffffff;
+  border: 2.4px solid #ffffff;
+  color: #ffffff;
+}
+@media (max-width: 700px) {
+  .about-img{
+    margin-left: 20px;
+    right: 0px;
+    top: 30px;
+   }
+}
+/*===================== Progress Bar ====================*/
+
+.progress {
+  border-radius: 10px;
 }
 
-@media (max-width: 700px){
-	.about-img{
-		margin-left: 20px;
-		right: 0px;
-		top: 30px;
-	}
+.progress .progress-bar {
+  width: 0px;
+  border-radius: 10px;
+  transition: 2s;
 }
 
-****** Progress Bar ********
 
-.progress{
-	border-radius: 10px;
-}
-
-.progress .progress-bar{
-	width: 0px;
-	border-radius: 10px;
-	transition: 2s;
-}
-
-/******* Quality *******/
-
+/* =================== Queality ======================*/
 .ex-me{
-	margin-top: 35px;
+  margin-top: 35px;
 }
 
-/******** Service Section **********/
 
+/* =================== Service Section ==================*/
 .service-h4{
-	padding-bottom: 30px;
+  padding-bottom: 30px;
 }
 
-.service-icon{
-	width: 60px;
-	height: 60px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	border-radius: 60px;
+.service-icon {
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 60px;
 }
 
 .service-box{
-	box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.1);
-	margin-left: 20px;
-	padding: 15 px;
-	padding-left: 30px;
-	padding-right: 30px;
+  box-shadow: 0px 1px 7px rgba(0, 0, 0, 0.1);  
+  margin-left: 20px;
+  padding: 15px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
-
 .service-box:hover{
-	box-shadow: 0px 1px 13px rgba(27, 27, 27, 0.705);
+  box-shadow: 0px 1px 13px rgba(27, 27, 27, 0.705); 
+ 
+}
+/* =================== Portfolio section ==================*/
+
+
+.portfolio-item .portfolio-btn {
+  position: absolute;
+  width: 0;
+  height: 0;
+  top: 50%;
+  left: 50%;
+  border-radius: 4px;
+  opacity: 0;
+  transition: .5s;
 }
 
-/******* Portfolio section ***********/
-
-.portfolio-item .portfolio-btn{
-	possition: absolute;
-	width: 0;
-	height: 0;
-	top: 50%;
-	left: 50%;
-	border-radius: 4px;
-	opacity: 0;
-	transition: .5s;
+.portfolio-item:hover .portfolio-btn {
+  opacity: 1;
+  width: calc(100% - 60px);
+  height: calc(100% - 60px);
+  top: 30px;
+  left: 30px;
 }
 
-.portfolio-item:hover .portfolio-btn{
-	opacity: 1;
-	width: calc(100% - 60px);
-	height: calc(100% - 60px);
-	top: 30px;
-	left: 30px;
-}
-
-/******* Testimonial ************/
-
+/* ====================== Testimonial ================*/
 .testimonial-carousel .text-center{
-	background-color: #eaecf0d0;
-	border-radius: 20px;
-	margin: 20px;
+  background-color: #eaecf0d0;
+  border-radius: 20px;
+  margin: 20px;
+
+}
+.testimonial-carousel .text-center h4{
+
 }
 
-.testimonial-carousel .owl-dot{
-	display: inline-block;
-	margin: 0 5px;
-	width: 12px;
-	height: 12px;
-	border-radius: 10px;
-	background: #dddddd;
+.testimonial-carousel .owl-dots {
+  margin-top: 25px;
+  text-align: center;
 }
 
-.testimonial-carousel .owl-dot.active{
-	background: #0BCEAF;
+.testimonial-carousel .owl-dot {
+  display: inline-block;
+  margin: 0 5px;
+  width: 12px;
+  height: 12px;
+  border-radius: 10px;
+  background: #dddddd;
 }
 
-/******* Contact us *************/
-
-.contact-form .help-block ul{
-	margin: 0;
-	padding: 0;
-	list-style-type: none;
+.testimonial-carousel .owl-dot.active {
+  background: #0BCEAF;
 }
 
-/************ back to botton *************/
 
-.scroll-to-bottom{
-	position: fixed;
-	width: 20px;
-	left: calc(50% - 10px);
-	bottom: 30px;
-	z-index: 11;
-	animation: action 1s infinite alternate;
+
+/* ========================== Contact Us ========================*/
+
+.contact-form .help-block ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
 
-.back-to-top{
-	position: fixed;
-	display: none;
-	width: 30px;
-	text-align: center;
-	right: 30px;
-	bottom: 30px;
-	z-index: 11;
-	animation: action 1s infinite alternate;
+
+/*====================== Back to buttom ==================*/
+
+.scroll-to-bottom {
+  position: fixed;
+  width: 20px;
+  left: calc(50% - 10px);
+  bottom: 30px;
+  z-index: 11;
+  animation: action 1s infinite alternate;
 }
 
-@keyframes action{
-	0%{
-		transform: translateY(0);
-	}
-	100%{
-		transform: translateY(-15px);
-	}
+.back-to-top {
+  position: fixed;
+  display: none;
+  width: 30px;
+  text-align: center;
+  right: 30px;
+  bottom: 30px;
+  z-index: 11;
+  animation: action 1s infinite alternate;
+}
+
+@keyframes action {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-15px);
+  }
 }
