testing diff of background overall

--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ body {
   line-height: 1.5;
   color: #6c757d;
   text-align: left;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   overflow-x: hidden;
 }
  
