--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,65 @@ body {
 
 /*Loading page method 2 End*/
 
+/*Dark theme testing start*/
+* {
+  box-sizing: border-box;
+}
+/*body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  transition: background 0.2s linear;
+}*/
+body.dark {
+  background-color: #292c35;
+}
+.checkbox {
+  opacity: 0;
+  position: right;
+}
+
+.label {
+  width: 45px;
+  height: 26px;
+  background-color:#111;
+  display: flex;
+  border-radius:50px;
+  align-items: right;
+  justify-content: space-between;
+  padding: 5px;
+  position: right;
+  transform: scale(1.5);
+}
+
+.ball {
+  width: 20px;
+  height: 20px;
+  background-color: white;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  border-radius: 50%;
+  transition: transform 0.2s linear;
+}
+
+/*  target the elemenent after the label*/
+.checkbox:checked + .label .ball{
+  transform: translateX(18px);
+}
+
+.fa-moon {
+  color: pink;
+}
+
+.fa-sun {
+  color: yellow;
+}
+	
+/*Dark theme testing ends*/
+
 html {
   font-family: sans-serif;
   line-height: 1.15;
