--- a/css/style.css
+++ b/css/style.css
@@ -367,6 +367,104 @@ h1,h2,h3,h4,h5,h6,p{
   left: 30px;
 }
 
+/* =============== Timeline =================== */
+*{
+  box-sizing: border-box;
+}
+
+.body-timeline{
+  background-color: white;
+  font-family: Helvetica, sans-serif;
+}
+
+.timeline{
+  position: relative;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.timeline::after{
+  content: '';
+  position: absolute;
+  width: 6px;
+  background-color: #74AFBE;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -3px;
+}
+
+.container-timeline{
+  padding: 10px 40px;
+  position: relative;
+  background-color: inherit;
+  width: 40%;
+}
+
+/* The circles on the timeline start */
+.container-timeline::after{
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  right: -17px;
+  background-color: white;
+  border: 4px solid #000;
+  top: 15px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+.left{
+  left: 10%;
+}
+
+.right{
+  left: 50%;
+}
+/* The circle on the timeline ends */
+
+/* Add arrows to the left conatainer (pointing right) start */
+.left::before{
+  content: '';
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+  right: 30px;
+  border: medium solid white;
+  border-width: 10px 0 10px 10px;
+  border-color: transparent transparent transparent #74AFBE;
+}
+/* Add arrows to the left container (pointaing right) ends */
+
+/* Add arrows to the right conatainer (pointing left) start */
+.right::before{
+  content: '';
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+  left: 30px;
+  border: medium solid white;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent #74AFBE transparent transparent;
+}
+/* Add arrows to the right conatainer (pointing left) ends */
+
+.right::after{
+  left: -16px;
+}
+
+.content-timeline{
+  padding: 10px 30px;
+  background-color: #74AFBE;
+  position: relative;
+  border-radius: 6px;
+}
+
 /* ====================== Testimonial ================*/
 .testimonial-carousel .text-center{
   background-color: #eaecf0d0;
