--- a/css/style.css
+++ b/css/style.css
@@ -182,7 +182,6 @@ body {
 	background: #7C83FD;
 }
 
-}
  
 a {
   color: #0BCEAF;
@@ -197,7 +196,41 @@ a:hover {
  
 h1,h2,h3,h4,h5,h6,p{
   color: #020202 !important;
-} 
+}
+
+/* new social media icon testing starts */
+.wrapper{
+  display: inline-flex;
+}
+
+.wrapper .icon{
+  margin: 0 20px;
+  text-align: center;
+  cursor: pointer;
+  display: felx;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  z-index: 2;
+  transition: 0.4s cubic-beizer(0.68, -0.55, 0.265, 1.55);
+}
+
+.wrapper .icon span{
+  display: block;
+  height: 60px;
+  width: 60px;
+  color: #fff;
+  background: #364f6b;
+  border-radius: 50%;
+  position: relative;
+  z-index: 2;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19),
+              0 6px 6px rgba(0, 0, 0, 0.23);
+  transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+/* new social media icon testing ends */
 
  
 
