hourglass design raw

--- a/css/style.css
+++ b/css/style.css
@@ -309,7 +309,14 @@ h1,h2,h3,h4,h5,h6,p{
 
 /* new social media icon testing ends */
 
- 
+
+/*animated hourglass icon start*/
+#div1{
+	font-size: 35px;
+}
+/*animated hourglass icon end*/
+
+
 
 /********** Template CSS ************/
 
