--- a/css/style.css
+++ b/css/style.css
@@ -198,6 +198,29 @@ h1,h2,h3,h4,h5,h6,p{
   color: #020202 !important;
 }
 
+/* new landing page background annimation start*/
+.landing-bg {
+  /*background: linear-gradient(-45deg, #2980b9, #2c3e50, #4B79A1, #283E51);*/
+  background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+/* new landing page background annimation end*/
+
 /* new social media icon testing starts */
 .wrapper{
   display: inline-flex;
@@ -257,7 +280,7 @@ h1,h2,h3,h4,h5,h6,p{
 }
 
 .icon .tooltip:before{
-	position: absolut:
+	position: absolute;
 	content: "";
 	height: 15px;
 	width: 15px;
@@ -292,7 +315,8 @@ h1,h2,h3,h4,h5,h6,p{
 .wrapper .instagram:hover span,
 .wrapper .instagram:hover .tooltip,
 .wrapper .instagram:hover .tooltip:before{
-	background: #cd486b;
+	/*background: #cd486b;*/
+	background: linear-gradient(to right, #833ab4, #fd1d1d, #fcb045);
 }
 
 .wrapper .github:hover span,
