--- a/css/style.css
+++ b/css/style.css
@@ -200,9 +200,10 @@ h1,h2,h3,h4,h5,h6,p{
 
 /* new landing page background annimation start*/
 .landing-bg {
-  /*background: linear-gradient(-45deg, #2980b9, #2c3e50, #4B79A1, #283E51);*/
-  background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+  background: linear-gradient(-45deg, #2980b9, #2c3e50, #4B79A1, #283E51);
+  /*background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);*/
   background-size: 400% 400%;
+   /*400% 400%;*/
   animation: gradient 15s ease infinite;
   height: 100vh;
 }
@@ -474,6 +475,7 @@ h1,h2,h3,h4,h5,h6,p{
 	border-radius: 8px;
 	background: rgb(240,240,240);
 	box-shadow: 0px 0px 0px 4px rgba(0,0,0,0.1);
+
 }
 
 .progress-width{
