--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,18 @@ a:hover {
   color: #078571;
   text-decoration: underline;
 }
+
+.app {
+  text-align: center;
+  color: black;
+
+}
+
+.app:hover{
+  color: red;
+  text-decoration: none;
+}
+
  
 h1,h2,h3,h4,h5,h6,p{
   color: #020202 !important;
